<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:padding="8dp"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="30dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconContentDescription="@string/title"
                    app:startIconDrawable="@drawable/outline_title_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="none"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_instructions"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/instructions"
                    android:padding="8dp"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_et_title"
                    app:startIconDrawable="@drawable/outline_description_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:inputType="none"
                        tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.OwnTrainer.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/create_meal_top_app_bar"
                app:navigationContentDescription="@string/back"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="@color/md_theme_light_onPrimary"
                app:title="@string/create_meal"
                app:titleTextAppearance="@style/TextAppearance.OwnTrainer.ActionBar.Title" />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>