<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_layout_et_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeErrorColor="@android:color/transparent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="text"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeErrorColor="@android:color/transparent" />

    </com.google.android.material.textfield.TextInputLayout>
</layout>